Web Inspector: Fonts Panel: Details section rows for basic properties are misaligned and have inconsistent ordering https://bugs.webkit.org/show_bug.cgi?id=253545
Reviewed by Patrick Angle.

This patch refactors the styles for `WI.DetailsSectionGroup` and `WI.DetailsSectionRow`
from using CSS table layout to using CSS Grid.

The table layout was used to ensure that labels and values align neatly in columns
regardless of the length of the each individual label.

Since introducing `WI.FontVariationDetailsSectionRow` in https://github.com/WebKit/WebKit/pull/8157
(which has a CSS Grid internal layout), the rows for the basic font properties group
are a mix of `display: table-row` and `display: grid`. The layout of this this group is inconsistent.

This patch replaces the table layout with CSS Grid and removes obsolete styles.

`WI.DetailsSectionRow` with the `.simple` CSS class modifier are used in the Fonts and Node details sidebar panels.

* Source/WebInspectorUI/UserInterface/Views/DetailsSection.css:
(.details-section > .content):
(.details-section > .content > .group):
(.details-section > .content > .group > *):
(.details-section > .content > .group:has(> .row.simple:last-of-type)):
(.details-section > .content > .group > .row.simple):
(.details-section > .content > .group > .row.simple > *):
(.details-section > .content > .group > .row.simple > .label):
(.details-section > .content > .group > .row.simple > .value):
(.details-section > .content > .group:has(.row.font-variation)): Deleted.
(.details-section > .content > .group > .row.simple:last-child > *): Deleted.
(.details-section > .content > .group > .row.simple.empty:last-child): Deleted.
(.details-section > .content > .group > .row.simple.empty:last-child > *): Deleted.
(.details-section > .content > .group > .row.simple.empty:last-child > * > *): Deleted.

Hidden descendant nodes of a hidden `display: table-cell` could still participate in layout.
No longer with CSS Grid.

* Source/WebInspectorUI/UserInterfa

--- a/Source/WebInspectorUI/UserInterface/Views/DetailsSection.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DetailsSection.css
@@ -164,24 +164,18 @@ body[dir=rtl] .details-section > .header::before {
     margin-inline-start: 3px;
 }
 
-.details-section > .content {
-    display: table;
-    width: 100%;
-    border-spacing: 0;
-    border-collapse: collapse;
-}
-
 .details-section.collapsed > .content {
     display: none;
 }
 
 .details-section > .content > .group {
-    display: table-row-group;
+    display: grid;
+    grid-template-columns: [label] minmax(85px, max-content) [value] 1fr;
     border-bottom: 1px solid var(--border-color);
 }
 
-.details-section > .content > .group:has(.row.font-variation) {
-    display: unset; /* Unsets `display: table-row-group` because it affects sizing of child elements that are grid containers. */
+.details-section > .content > .group > * {
+    grid-column: 1 / -1;
 }
 
 .details-section > .content > .group:last-child {
@@ -192,12 +186,13 @@ body[dir=rtl] .details-section > .header::before {
     background-color: var(--background-color-intermediate);
 }
 
-.details-section > .content > .group > .row.simple {
-    display: table-row;
+.details-section > .content > .group:has(> .row.simple:last-child) {
+    padding-block-end: 3px;
 }
 
-.details-section > .content > .group > .row.simple:last-child > * {
-    padding-bottom: 5px !important;
+.details-section > .content > .group > .row.simple {
+    display: grid;
+    grid-template-columns: subgrid;
 }
 
 .details-section > .content > .group > .row.simple.empty {
@@ -208,34 +203,16 @@ body[dir=rtl] .details-section > .header::before {
     font-size: 10px;
 }
 
-.details-section > .content > .group > .row.simple.empty:last-child {
-    display: table-row;
-}
-
-.details-section > .content > .group > .row.simple.empty:last-child > * {
-    display: table-cell;
-    height: 1px;
-    font-size: 0;
-    color: transparent;
-    padding-top: 0;
-    padding-bottom: 3px !important;
-}
-
-.details-section > .content > .group > .row.simple.empty:last-child > * > * {
-    display: none;
-}
-
 .details-section > .content > .group > .row.simple > * {
-    display: table-cell;
     vertical-align: top;
     padding: 5px 4px 2px;
 }
 
 .details-section > .content > .group > .row.simple > .label {
-    width: 85px;
     padding-inline-start: 6px;
     color: hsl(0, 0%, 20%);
     text-align: end;
+    grid-column: label;
 }
 
 .details-section > .content > .group > .row.simple > .value {
@@ -244,6 +221,7 @@ body[dir=rtl] .details-section > .header::before {
     word-wrap: break-word;
     cursor: text;
     -webkit-user-select: text;
+    grid-column: value;
 }
 
 .details-section > .content > .group > .row.simple > .value .go-to-arrow {
